--- a/client/components/FilesUploadedNavBar/FilesUploadedNavBar.css
+++ b/client/components/FilesUploadedNavBar/FilesUploadedNavBar.css
@@ -131,3 +131,19 @@
     font-style: italic;
     color: #666;
 }
+
+
+@media (max-width: 500px) {
+    .files-uploaded-navbar {
+        width: 100%;
+        padding: 25px;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        border-radius: 15px;
+        border: 5px solid var(--orange);
+        gap: 25px;
+        font-family: var(--font-Helvetica);
+        height: max-content;
+    }
+}
